@@ -342,6 +342,9 @@ Core and builtins
 Library
 -------
 
+- Issue #1735: TarFile.extractall() now correctly sets directory permissions
+  and times.
+
 - Bug #1713: posixpath.ismount() claims symlink to a mountpoint is a mountpoint.
 
 - Bug #1687: Fxed plistlib.py restricts <integer> to Python int when writing
